# TestActixWeb

./: .env  Cargo.toml
src/: main.rs
src/auth/: controller.rs
src/cards/card/: controller.rs  model.rs  repository.rs  service.rs
src/database/: mongodb.rs
src/error/: mod.rs
src/log/: mod.rs
src/user/: controller.rs  mod.rs  model.rs  repository.rs  service.rs  test.rs
src/utils/: cursor_to_vec.rs  mod.rs  model.rs
