[package]
name = "test_actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
actix-web-httpauth = "0.8.0"
actix-service = "2.0.2"
actix-http = "3.3.0"
serde = { version = "1.0.152", features = ["derive"]}
dotenv = "0.15.0"
futures = "0.3.25"
uuid = { version = "1.2.2", features = ["v4"]}
chrono = { version = "0.4.23", features = ["serde"]}
env_logger = "0.10.0"
log = "0.4.17"
strum_macros = "0.24.3"
strum = { version = "0.24.1", features = ["derive"]}
thiserror = "1.0.38"
mongodb = { version = "2.4.0-beta", default-features = false, features = ["async-std-runtime"]}
argonautica = { version = "0.2", features = ["simd"] }
hmac = "0.12.1"
jwt = "0.16.0"
sha2 = "0.10.6"
async-trait = "0.1.63"
lazy_static = "1.4.0"